--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="02S-lu-ViP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qel-7V-GDi">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="1890.8396946564885" y="0.70422535211267612"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar View Controller-->
         <scene sceneID="y4n-ea-Tsf">
             <objects>
-                <tabBarController id="02S-lu-ViP" sceneMemberID="viewController">
+                <tabBarController id="02S-lu-ViP" customClass="TabBarViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="vAB-ul-RlJ">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -61,6 +61,37 @@
             </objects>
             <point key="canvasLocation" x="527" y="-687"/>
         </scene>
+        <!--Auth View Controller-->
+        <scene sceneID="akR-gd-J23">
+            <objects>
+                <viewController storyboardIdentifier="AuthViewController" id="Qel-7V-GDi" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8fJ-G3-Kje">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="yCS-rl-XL7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="QkF-Yq-8Wg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BR9-9b-a2c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1023.6641221374045" y="738.73239436619724"/>
+        </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="bzp-ls-pSN">
+            <objects>
+                <viewController storyboardIdentifier="WebViewViewController" id="F10-B2-4dQ" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mAH-Tn-iph">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="nd3-lI-qoR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lEW-oW-Pc9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1910.6870229007632" y="738.73239436619724"/>
+        </scene>
         <!--Single Image View Controller-->
         <scene sceneID="gwJ-9t-2ht">
             <objects>
@@ -74,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFq-sT-jwX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="984" y="739"/>
+            <point key="canvasLocation" x="2837.4045801526718" y="738.73239436619724"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1eG-hx-pZG">
